added connect link

--- a/index.html
+++ b/index.html
@@ -419,7 +419,8 @@
   <!-- ── Sign-off ──────────────────────────────────────── -->
   <div class="sign-off">
     <div class="names">&mdash; Joel &amp; Luna</div>
-    <a href="mailto:joel@custlabs.com">joel@custlabs.com</a>
+    <a href="mailto:joel@custlabs.com">joel@custlabs.com</a><br />
+    <a href="https://www.linkedin.com/in/joelsolymosi/" target="_blank">Connect on linkedin</a>
   </div>
 
   <!-- ── Footnotes ─────────────────────────────────────── -->
