--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
   <meta property="og:title" content="Self-Improving Agents Improve Through Their Humans">
   <meta property="og:description" content="An interim field report on building and operating a self-improving agentic system - architecture, receipts, and hard-won lessons from the frontier.">
   <meta property="og:type" content="article">
-  <meta property="og:image" content="https://joelsolymosi.github.io/Self-Improving-Agents-Report/pulse-image.png">
+  <meta property="og:image" content="https://joel-solymosi.github.io/Self-Improving-Agents-Report/pulse-image.png">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
-  <meta property="og:url" content="https://joelsolymosi.github.io/Self-Improving-Agents-Report/">
+  <meta property="og:url" content="https://joel-solymosi.github.io/Self-Improving-Agents-Report/">
   <meta property="og:site_name" content="Joel Solymosi">
   <meta property="article:author" content="https://www.linkedin.com/in/joelsolymosi/">
   <meta property="article:published_time" content="2026-02-16">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Self-Improving Agents Improve Through Their Humans">
   <meta name="twitter:description" content="An interim field report on building and operating a self-improving agentic system - architecture, receipts, and hard-won lessons from the frontier.">
-  <meta name="twitter:image" content="https://joelsolymosi.github.io/Self-Improving-Agents-Report/pulse-image.png">
+  <meta name="twitter:image" content="https://joel-solymosi.github.io/Self-Improving-Agents-Report/pulse-image.png">
   <style>
     /* ── Reset & Base ─────────────────────────────────────── */
     *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
